# llm-chat-client

./: .coverage  .coveragerc  .dockerignore  .flake8  .gitignore  1.13.0  LICENSE  README.md  config.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.bat  run.py  执行.md
.github/workflows/: backend_ci.yml  ci.yml  frontend_ci.yml
backend/: Dockerfile  config.yml
backend/app/: __init__.py  main.py  manager.py  server.py
backend/app/core/: __init__.py  config.py  error_handler.py  logging_config.py
backend/app/providers/: __init__.py  base.py  base_interface.py  factory.py
backend/app/repositories/: __init__.py  in_memory.py  redis_repo.py  session_base.py
backend/app/services/: export_service.py  word_styles.py
backend/app/templates/: export.html.j2
backend/infra/: redis_client.py
backend/tests/: test_export_service.py  test_repo_selection.py  test_step6_7.py
docs/: 启动建议及历史优化.mc  项目结构优化建议.md
examples/: mcp_example.py
frontend/: app.js  index.html
llm-api-project/: __init__.py  main.py  manager.py  silicon_provider.py
llm-chat-web/: app.js  index.html  server.py  styles.css
llm_api_project/: __init__.py  api.py  config.py  google_provider.py  main.py  manager.py  server.py  silicon_provider.py  wisdom_gate_provider.py
mcp_service/: __init__.py
mcp_service/client/: __init__.py  mcp_client.py
mcp_service/config/: __init__.py  settings.py
mcp_service/utils/: __init__.py  logger.py
scripts/: run_backend.py  run_fullstack.py
tests/: test_export_service.py  test_provider_switch.py  test_session_repo.py  test_smoke.py
(+8 files in other folders)
